--- a/views/stores.erb
+++ b/views/stores.erb
@@ -6,12 +6,13 @@
     <% if @stores.any? %>
       <ul>
         <% @stores.each do |store| %>
-          <li><%= store.name %></li>
+          <li> <a href="/store/<%=store.id%>"><%= store.name %></a></li>
         <% end %>
       </ul>
     <% else %>
       <h3>There are no stores yet</h3>
     <% end %>
+    <h2><a href="/">Home</a></h2>
   </div>
   <div class="col-sm-6">
     <h3>Add Store</h3>
