add name validation to store and brand

--- a/views/stores.erb
+++ b/views/stores.erb
@@ -18,7 +18,7 @@
     <h3>Add Store</h3>
     <form action="/stores" method="post">
       <label for="name">Name of Store:</label>
-      <input type="text" name="name">
+      <input type="text" name="name" required>
       <button type="submit" name="button">Add Store</button>
     </form>
   </div>
