--- a/views/brands.erb
+++ b/views/brands.erb
@@ -18,7 +18,7 @@
     <h3>Add Brand</h3>
     <form action="/brands" method="post">
       <label for="name">Name of Brand:</label>
-      <input type="text" name="name">
+      <input type="text" name="name" required>
       <button type="submit" name="button">Add Brand</button>
     </form>
   </div>
