--- a/views/store.erb
+++ b/views/store.erb
@@ -1,7 +1,7 @@
 <h1><%= @store.name %></h1>
 <div class="row well">
   <div class="col-sm-6">
-    <h3>Stores</h3>
+    <h3>Brands</h3>
 
     <% if @store.brands.any? %>
     <ul>
