messing with css

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,15 @@
-<h1>Shoe Finder</h1>
+<ul class="nav nav-tabs mynav">
+  <li class="nav-item">
+    <a class="nav-link active" href="/">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/stores">Stores</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/brands">Brands</a>
+  </li>
+</ul>
+<div class="jumbotron">
+  <h1>Shoe Finder</h1>
 
-<a href="/brands">View All Brands</a>
-<a href="/stores">View All Stores</a>
+</div>
