--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,13 @@
-h1 {
-  text-align: center;
+/*body {
+  background-image: url('img/background.jpg');
+  background-size: contain;
+}*/
+
+
+.mynav {
+  font-size: 1.5em;
+}
+
+.forms {
+  display: inline-block;
 }
