--- a/views/brand.erb
+++ b/views/brand.erb
@@ -1,5 +1,5 @@
 <h1><%= @brand.name %></h1>
-<div class="row well">
+<div class="row">
   <div class="col-sm-6">
     <h3>Stores</h3>
 
@@ -12,31 +12,32 @@
     <% else %>
       <p>This brand needs to be in stores!</p>
     <% end %>
+  </div>
+  <div class="col-sm-3 " >
 
-    <form action="/brand/<%= @brand.id %>" method="post">
+    <form class="form-group" action="/brand/<%= @brand.id %>" method="post">
       <input type="hidden" name="_method" value="patch">
-      <select name="store">
+      <select name="store" class="selectpicker">
         <% @stores.each do |store| %>
         <option value="<%= store.id %>"><%= store.name %></option>
         <% end %>
       </select>
-      <button type="submit" name="button">Add to Store</button>
+      <button class="btn btn-primary" type="submit" name="button">Add to Store</button>
     </form>
 
     <form action="/brand/<%= @brand.id %>/name" method="post">
       <input type="hidden" name="_method" value="patch">
       <label for="new_brand">Rename Your Brand</label>
       <input type="text" name="new_brand" value="">
-      <button type="submit" name="button">Rename Brand</button>
+      <button class="btn btn-primary pull-right" type="submit" name="button">Rename Brand</button>
     </form>
 
-    <form action="/brand/<%= @brand.id %>" method="post">
+    <form class="form-group" action="/brand/<%= @brand.id %>" method="post">
       <input type="hidden" name="_method" value="delete">
       <label for="delete_brand">Delete This Brand</label>
-      <button type="submit" name="button">Delete Brand</button>
+      <button class="btn btn-primary" type="submit" name="button">Delete Brand</button>
     </form>
+      <h3><a href="/">Home</a></h3>
+      <h3><a href="/brands">Brands</a></h3>
   </div>
 </div>
-
-<h3><a href="/">Home</a></h3>
-<h3><a href="/brands">Brands</a></h3>
